--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
         </div>
 
         <div class="row">
-
           <div class="col-1-of-3">
             <div class="card">
               <div class="card_side card_side--front">
@@ -156,24 +155,23 @@
                   >
                 </h4>
                 <div class="card_details">
-                    <ul>
-                        <li>3-day tours</li>
-                        <li>Up to 30 people</li>
-                        <li>2 tour guides</li>
-                        <li>Sleep in cozy hostels</li>
-                        <li>Difficulty: Easy</li>
-                    </ul>
+                  <ul>
+                    <li>3-day tours</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy hostels</li>
+                    <li>Difficulty: Easy</li>
+                  </ul>
                 </div>
               </div>
               <div class="card_side card_side--back card_side--back-1">
                 <div class="card_cta">
-                    <div class="card_price-box">
-                        <p class="card_price-only">Only</p>
-                        <p class="card_price-value">$297.00</p>
-                    </div>
-                    <a href="" class="btn btn--white">Book now!</a>
+                  <div class="card_price-box">
+                    <p class="card_price-only">Only</p>
+                    <p class="card_price-value">$297.00</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book now!</a>
                 </div>
-
               </div>
             </div>
           </div>
@@ -188,24 +186,23 @@
                   >
                 </h4>
                 <div class="card_details">
-                    <ul>
-                        <li>7-day tours</li>
-                        <li>Up to 40 people</li>
-                        <li>6 tour guides</li>
-                        <li>Sleep in provided tents</li>
-                        <li>Difficulty: Medium</li>
-                    </ul>
+                  <ul>
+                    <li>7-day tours</li>
+                    <li>Up to 40 people</li>
+                    <li>6 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: Medium</li>
+                  </ul>
                 </div>
               </div>
               <div class="card_side card_side--back card_side--back-2">
                 <div class="card_cta">
-                    <div class="card_price-box">
-                        <p class="card_price-only">Only</p>
-                        <p class="card_price-value">$497.00</p>
-                    </div>
-                    <a href="" class="btn btn--white">Book now!</a>
+                  <div class="card_price-box">
+                    <p class="card_price-only">Only</p>
+                    <p class="card_price-value">$497.00</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book now!</a>
                 </div>
-
               </div>
             </div>
           </div>
@@ -220,32 +217,102 @@
                   >
                 </h4>
                 <div class="card_details">
-                    <ul>
-                        <li>5-day tours</li>
-                        <li>Up to 15 people</li>
-                        <li>3 tour guides</li>
-                        <li>Sleep in provided tents</li>
-                        <li>Difficulty: Hard</li>
-                    </ul>
+                  <ul>
+                    <li>5-day tours</li>
+                    <li>Up to 15 people</li>
+                    <li>3 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: Hard</li>
+                  </ul>
                 </div>
               </div>
               <div class="card_side card_side--back card_side--back-3">
                 <div class="card_cta">
-                    <div class="card_price-box">
-                        <p class="card_price-only">Only</p>
-                        <p class="card_price-value">$897.00</p>
-                    </div>
-                    <a href="" class="btn btn--white">Book now!</a>
+                  <div class="card_price-box">
+                    <p class="card_price-only">Only</p>
+                    <p class="card_price-value">$897.00</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book now!</a>
                 </div>
-
               </div>
             </div>
           </div>
-
         </div>
 
         <div class="u-center-text u-margin-top-huge">
-            <a href="" class="btn btn--green">Discover all tours</a>
+          <a href="" class="btn btn--green">Discover all tours</a>
+        </div>
+      </section>
+
+      <section class="section-stories">
+        <div class="bg-video">
+            <video class="bg-video_content" autoplay muted loop>
+                <source src="img/video.mp4" type="video/mp4">
+                <source src="img/video.webm" type="video/webm"> 
+                Your browser is not supported!
+            </video>
+        </div>
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story_shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="person-on-a-tour"
+                class="story_img"
+              />
+              <figcaption class="story_caption">Mary Smith</figcaption>
+            </figure>
+            <div class="story_text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
+                cupiditate repudiandae incidunt suscipit enim, inventore saepe
+                numquam eius voluptates ipsa architecto necessitatibus sed
+                similique dolorum quis itaque perferendis sequi officiis?
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story_shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="person-on-a-tour"
+                class="story_img"
+              />
+              <figcaption class="story_caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story_text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Wow! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
+                cupiditate repudiandae incidunt suscipit enim, inventore saepe
+                numquam eius voluptates ipsa architecto necessitatibus sed
+                similique dolorum quis itaque perferendis sequi officiis?
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge"><a href="" class="btn btn-text">Read all stories &rarr;</a></div>
+      </section>
+
+
+      <section class="section-booking">
+        <div class="row">
+          <div class="book">
+            
+          </div>
         </div>
       </section>
     </main>
