--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
 
       <section class="section-stories">
         <div class="bg-video">
-            <video class="bg-video_content" autoplay muted loop>
-                <source src="img/video.mp4" type="video/mp4">
-                <source src="img/video.webm" type="video/webm"> 
-                Your browser is not supported!
-            </video>
+          <video class="bg-video_content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported!
+          </video>
         </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
@@ -304,14 +304,75 @@
           </div>
         </div>
 
-        <div class="u-center-text u-margin-top-huge"><a href="" class="btn btn-text">Read all stories &rarr;</a></div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="" class="btn btn-text">Read all stories &rarr;</a>
+        </div>
       </section>
 
-
-      <section class="section-booking">
+      <section class="section-book">
         <div class="row">
           <div class="book">
-            
+            <div class="book_form">
+              <form action="#" class="form">
+                <div class="u-margin-bottom-medium">
+                  <h2 class="heading-secondary">Start booking now</h2>
+                </div>
+
+                <div class="form_group">
+                  <input
+                    type="text"
+                    class="form_input"
+                    placeholder="Full Name"
+                    id="name"
+                    required
+                  />
+                  <label for="name" class="form_label">Full Name</label>
+                </div>
+
+                <div class="form_group">
+                  <input
+                    type="email"
+                    class="form_input"
+                    placeholder="Email Address"
+                    id="email"
+                    required
+                  />
+                  <label for="email" class="form_label">Email Address</label>
+                </div>
+
+                <div class="form_group u-margin-bottom-medium">
+                  <div class="form_radio-group">
+                    <input
+                      type="radio"
+                      class="form_radio-input"
+                      id="small"
+                      name="size"
+                    />
+                    <label for="small" class="form_radio-label">
+                      <span class="form_radio-button"></span> Small tour
+                      group</label
+                    >
+                  </div>
+
+                  <div class="form_radio-group">
+                    <input
+                      type="radio"
+                      class="form_radio-input"
+                      id="large"
+                      name="size"
+                    />
+                    <label for="large" class="form_radio-label">
+                      <span class="form_radio-button"></span> Large tour
+                      group</label
+                    >
+                  </div>
+                </div>
+
+                <div class="form_group">
+                  <button class="btn btn--green">Next step &rarr;</button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </section>
