--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <div class="navigation">
+      <input type="checkbox" id="navi-toggle" class="navigation_checkbox" />
+      <label for="navi-toggle" class="navigation_button">
+        <span class="navigation_icon"></span>
+      </label>
+      <div class="navigation_background">&nbsp;</div>
+      <nav class="navigation_nav">
+        <ul class="navigation_list">
+          <li class="navigation_item"><a href="#" class="navigation_link"><span>01</span>About Natours</a></li>
+          <li class="navigation_item"><a href="#" class="navigation_link"><span>02</span>Your benefits</a></li>
+          <li class="navigation_item"><a href="#" class="navigation_link"><span>03</span>Popular Tours</a></li>
+          <li class="navigation_item"><a href="#" class="navigation_link"><span>04</span>Stories</a></li>
+          <li class="navigation_item"><a href="#" class="navigation_link"><span>05</span>Book now</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="natours-logo" class="logo" />
@@ -377,5 +394,45 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer_logo-box">
+        <img src="img/logo-green-2x.png" class="footer_logo" alt="full-logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer_navigation">
+            <ul class="footer_list">
+              <li class="footer_item">
+                <a href="" class="footer_link"><span>01</span>Company</a>
+              </li>
+              <li class="footer_item">
+                <a href="" class="footer_link"><span>02</span>Contact Us</a>
+              </li>
+              <li class="footer_item">
+                <a href="" class="footer_link"><span>03</span>Careers</a>
+              </li>
+              <li class="footer_item">
+                <a href="" class="footer_link"><span>04</span>Privacy Policy</a>
+              </li>
+              <li class="footer_item">
+                <a href="" class="footer_link"><span>05</span>Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer_copyright">
+            Built a <a href="#" class="footer_link">sample project</a> for an
+            online course
+            <a href="" class="footer_link">Advanced CSS and SASS</a>. Copyright
+            &copy; by Jonas Schmedtmann. You are 100% allowed to use this
+            webpage for both personal and commercial use, but NOT to claim it as
+            your own design. A credit to the original author, Jonas Schmedtmann,
+            is of course highly appreciated!
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
