--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
       </section>
 
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
@@ -187,7 +187,7 @@
                     <p class="card_price-only">Only</p>
                     <p class="card_price-value">$297.00</p>
                   </div>
-                  <a href="" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -218,7 +218,7 @@
                     <p class="card_price-only">Only</p>
                     <p class="card_price-value">$497.00</p>
                   </div>
-                  <a href="" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -249,7 +249,7 @@
                     <p class="card_price-only">Only</p>
                     <p class="card_price-value">$897.00</p>
                   </div>
-                  <a href="" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -404,19 +404,19 @@
           <div class="footer_navigation">
             <ul class="footer_list">
               <li class="footer_item">
-                <a href="" class="footer_link"><span>01</span>Company</a>
+                <a href="" class="footer_link">Company</a>
               </li>
               <li class="footer_item">
-                <a href="" class="footer_link"><span>02</span>Contact Us</a>
+                <a href="" class="footer_link">Contact Us</a>
               </li>
               <li class="footer_item">
-                <a href="" class="footer_link"><span>03</span>Careers</a>
+                <a href="" class="footer_link">Careers</a>
               </li>
               <li class="footer_item">
-                <a href="" class="footer_link"><span>04</span>Privacy Policy</a>
+                <a href="" class="footer_link">Privacy Policy</a>
               </li>
               <li class="footer_item">
-                <a href="" class="footer_link"><span>05</span>Terms</a>
+                <a href="" class="footer_link">Terms</a>
               </li>
             </ul>
           </div>
@@ -434,5 +434,21 @@
         </div>
       </div>
     </footer>
+
+    <div class="popup" id="popup">
+      <div class="popup_content">
+        <div class="popup_left">
+          <img src="img/nat-8.jpg" alt="tour photo" class="popup_img">
+          <img src="img/nat-9.jpg" alt="tour photo" class="popup_img">
+        </div>
+        <div class="popup_right">
+          <a href="#section-tours" class="popup_close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+          <p class="popup_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur purus leo, dictum faucibus dictum sed, malesuada non ipsum. Aenean sapien lectus, tempor sit amet tellus in, faucibus sodales est. Maecenas eleifend ex in nunc pharetra, vitae consequat nulla accumsan. Donec tincidunt nisl non orci porta rhoncus. Aliquam eu tellus elementum, sodales diam quis, finibus augue. Aliquam erat volutpat. Maecenas ut lacus eros. Aliquam erat volutpat. Sed semper lectus id lobortis cursus.</p>
+          <a href="#" class="btn btn--green">Book now!</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
