--- a/index.html
+++ b/index.html
@@ -80,21 +80,28 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-              <img
-                src="img/nat-1-large.jpg"
-                alt="Photo 1"
+
+              <img 
+                srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" 
+                alt="photo_1"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em), 30vw"
                 class="composition_photo composition_photo--p1"
               />
-              <img
-                src="img/nat-2-large.jpg"
-                alt="Photo 2"
+
+              <img 
+                srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" 
+                alt="photo_2"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em), 30vw"
                 class="composition_photo composition_photo--p2"
               />
-              <img
-                src="img/nat-3-large.jpg"
-                alt="Photo 3"
+
+              <img 
+                srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" 
+                alt="photo_3"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em), 30vw"
                 class="composition_photo composition_photo--p3"
               />
+
             </div>
           </div>
         </div>
@@ -397,7 +404,13 @@
 
     <footer class="footer">
       <div class="footer_logo-box">
-        <img src="img/logo-green-2x.png" class="footer_logo" alt="full-logo" />
+
+        
+        <picture class="footer_logo">
+          <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
+          <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" class="footer_logo" alt="full-logo" />
+        </picture>
+
       </div>
       <div class="row">
         <div class="col-1-of-2">
@@ -423,13 +436,9 @@
         </div>
         <div class="col-1-of-2">
           <p class="footer_copyright">
-            Built a <a href="#" class="footer_link">sample project</a> for an
-            online course
-            <a href="" class="footer_link">Advanced CSS and SASS</a>. Copyright
-            &copy; by Jonas Schmedtmann. You are 100% allowed to use this
-            webpage for both personal and commercial use, but NOT to claim it as
-            your own design. A credit to the original author, Jonas Schmedtmann,
-            is of course highly appreciated!
+            Built as part of the <a href="#" class="footer_link">Advanceed CSS and SASS</a> online course. Copyright &copy; 2024 Jonas Schmedtmann. All rights reserved. <br/>
+
+            You are 100% allowed to use this webpage for both personal and commercial purposes, but NOT to claim it as your own design. Credit to the original author, <a href="#" class="footer_link">Jonas Schmedtmann</a> , is highly appreciated.
           </p>
         </div>
       </div>
