Updated: Section Features

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="img/pulse/_logo-pulse.png" />
 
-    <title>Natours | Exciting tours for adventurous people</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+    <title>Pulse: Productivty App</title>
   </head>
   <body>
-    <div class="navigation">
+    <!-- <div class="navigation">
       <input type="checkbox" id="navi-toggle" class="navigation_checkbox" />
       <label for="navi-toggle" class="navigation_button">
         <span class="navigation_icon"></span>
@@ -31,144 +33,147 @@
           <li class="navigation_item"><a href="#" class="navigation_link"><span>05</span>Book now</a></li>
         </ul>
       </nav>
-    </div>
+    </div> -->
 
     <header class="header">
-      <div class="header__logo-box">
+      <!-- <div class="header__logo-box">
         <img src="img/logo-white.png" alt="natours-logo" class="logo" />
-      </div>
+      </div> -->
 
       <div class="header__text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary--main">Outdoors</span>
-          <span class="heading-primary--sub">is where this happens</span>
+          <span class="heading-primary--main">Pulse</span>
+          <span class="heading-primary--sub">Feel the Rhythm of Your Productivity</span>
         </h1>
 
-        <a href="" class="btn btn--white btn--animated">Discover our Tours</a>
+        <a href="" class="btn btn--pulsered btn--animated">Try It</a>
       </div>
     </header>
 
     <main>
-      <section class="section-about">
-        <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">
-            Exciting tours for adventurous people
-          </h2>
-        </div>
-        <div class="row">
-          <div class="col-1-of-2">
+        <section class="section-about">
+          <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+              Find your Rhythm and Achieve Your Goals with Pulse
+            </h2>
+          </div>
+          <div class="row">
+            <div class="col-1-of-2">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Concept Overview
+              </h3>
+              <p class="paragraph">
+                Pulse is more than a task manager—it’s your personal productivity rhythm coach. The app intelligently adapts to your energy levels, offering dynamic scheduling, focus timers, and smart break reminders to help you stay in sync with your optimal working patterns. By combining actionable insights, intuitive tools, and a sleek design, Pulse transforms the way you approach your day, ensuring not just productivity but also balance and well-being.
+              </p>
+  
+  
+              <a href="#" class="btn-text">Learn More &rarr;</a>
+            </div>
+            <div class="col-1-of-2">
+              <div class="composition">
+  
+                <img 
+                  srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" 
+                  alt="photo_1"
+                  sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em), 30vw"
+                  class="composition_photo composition_photo--p1"
+                />
+  
+                <img 
+                  srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" 
+                  alt="photo_2"
+                  sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em), 30vw"
+                  class="composition_photo composition_photo--p2"
+                />
+  
+                <img 
+                  srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" 
+                  alt="photo_3"
+                  sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em), 30vw"
+                  class="composition_photo composition_photo--p3"
+                />
+  
+              </div>
+            </div>
+          </div>
+        </section>
+
+      
+      <div class="section-features">
+        <div class="row row__feature-box">
+          <div class="feature-box">
+            <svg class="feature-box_icon" xmlns="http://www.w3.org/2000/svg" width="90px" height="90px" viewBox="0 0 24 24"><path class="path" fill="currentColor" d="M18.749 3a2.25 2.25 0 0 1 2.25 2.25v13.502a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 18.752V5.25A2.25 2.25 0 0 1 5.25 3zm0 1.5H5.25a.75.75 0 0 0-.75.75v13.502c0 .415.336.75.75.75h13.499a.75.75 0 0 0 .75-.75V5.25a.75.75 0 0 0-.75-.75m-10.494 7l1.557-3.55a.75.75 0 0 1 1.333-.081l.05.103l2.381 5.946l1.003-2.003a.75.75 0 0 1 .566-.407l.105-.008h2a.75.75 0 0 1 .102 1.494L17.25 13h-1.537l-1.542 3.081a.75.75 0 0 1-1.319.044l-.048-.1l-2.337-5.835l-1.035 2.362a.75.75 0 0 1-.577.44l-.11.008H6.75a.75.75 0 0 1-.102-1.493l.102-.007zl1.557-3.55z"/></svg>
             <h3 class="heading-tertiary u-margin-bottom-small">
-              You're going to fall in love with nature
+              Energy-based Task Management
             </h3>
-            <p class="paragraph">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis
-              ipsam tenetur soluta rem eius quaerat itaque, illum debitis
-              blanditiis commodi error fuga accusamus necessitatibus quia
-              laboriosam fugiat numquam quo consequuntur.
+            <p class="feature-box_text">
+              Prioritizes and schedule tasks based on your energy levels throughout the day
             </p>
-
-            <h3 class="heading-tertiary u-margin-bottom-small">
-              Live adventures like you never have before
-            </h3>
-            <p class="paragraph">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis
-              ipsam tenetur soluta rem eius quaerat itaque, illum debitis
-              blanditiis.
-            </p>
-
-            <a href="#" class="btn-text">Learn More &rarr;</a>
           </div>
-          <div class="col-1-of-2">
-            <div class="composition">
-
-              <img 
-                srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" 
-                alt="photo_1"
-                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em), 30vw"
-                class="composition_photo composition_photo--p1"
-              />
-
-              <img 
-                srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" 
-                alt="photo_2"
-                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em), 30vw"
-                class="composition_photo composition_photo--p2"
-              />
-
-              <img 
-                srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" 
-                alt="photo_3"
-                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em), 30vw"
-                class="composition_photo composition_photo--p3"
-              />
-
+  
+            <div class="feature-box">
+              <svg class="feature-box_icon" xmlns="http://www.w3.org/2000/svg" width="90px" height="90px" viewBox="0 0 24 24"><path class="path" fill="currentColor" d="M9 3V1h6v2zm2 11h2V8h-2zm1 8q-1.85 0-3.488-.712T5.65 19.35t-1.937-2.863T3 13t.713-3.488T5.65 6.65t2.863-1.937T12 4q1.55 0 2.975.5t2.675 1.45l1.4-1.4l1.4 1.4l-1.4 1.4Q20 8.6 20.5 10.025T21 13q0 1.85-.713 3.488T18.35 19.35t-2.863 1.938T12 22m0-2q2.9 0 4.95-2.05T19 13t-2.05-4.95T12 6T7.05 8.05T5 13t2.05 4.95T12 20m0-7"/></svg>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Dynamic Focus Timer
+              </h3>
+              <p class="feature-box_text">
+                Customizable timer inspired by the Pomodoro technique to help you stay on track
+              </p>
             </div>
-          </div>
+  
+            <div class="feature-box">
+              <svg class="feature-box_icon" xmlns="http://www.w3.org/2000/svg" width="90px" height="90px" viewBox="0 0 2048 2048"><path class="path" fill="currentColor" d="M960 384q119 0 224 45t183 124t123 183t46 224q0 63-8 118t-25 105t-44 99t-64 100q-29 40-51 72t-36 64t-21 70t-7 89v179q0 40-15 75t-41 61t-61 41t-75 15H832q-40 0-75-15t-61-41t-41-61t-15-75v-180q0-51-7-88t-21-69t-36-65t-51-72q-37-51-63-99t-44-99t-26-106t-8-118q0-119 45-224t124-183t183-123t224-46m192 1472v-64H768v64q0 26 19 45t45 19h256q26 0 45-19t19-45m256-896q0-93-35-174t-96-143t-142-96t-175-35q-93 0-174 35t-143 96t-96 142t-35 175q0 89 18 153t47 114t61 94t61 92t48 108t21 143h384q1-83 20-142t48-108t61-92t61-94t47-115t19-153M960 256q-26 0-45-19t-19-45V64q0-26 19-45t45-19t45 19t19 45v128q0 26-19 45t-45 19M192 928H64q-26 0-45-19T0 864t19-45t45-19h128q26 0 45 19t19 45t-19 45t-45 19m53 261q26 0 45 19t19 46q0 20-11 35t-30 24q-11 5-30 13t-41 17t-40 15t-32 7q-26 0-45-19t-19-46q0-20 11-35t30-24q11-4 30-13t41-17t40-15t32-7m152-645q0 26-19 45t-45 19q-18 0-33-9l-109-67q-14-9-22-23t-9-32q0-26 19-45t45-19q16 0 33 10l110 66q14 8 22 23t8 32m83-368q0-26 19-45t45-19q17 0 32 9t24 24l62 112q8 14 8 30q0 27-19 46t-45 19q-17 0-32-9t-24-24l-62-112q-8-14-8-31m1376 624q26 0 45 19t19 45t-19 45t-45 19h-128q-26 0-45-19t-19-45t19-45t45-19zm2 501q0 26-19 45t-45 19q-11 0-30-6t-41-16t-40-17t-31-14q-18-8-29-24t-12-36q0-27 19-45t46-19q12 0 31 7t40 16t40 18t31 13q18 8 29 23t11 36m-271-693q-26 0-45-19t-19-45q0-17 8-32t22-23l110-66q17-10 33-10q26 0 45 19t19 45q0 17-8 31t-23 24l-109 67q-15 9-33 9m-337-321q0-16 8-30l62-112q8-15 23-24t33-9q26 0 45 19t19 45q0 17-8 31l-62 112q-8 15-23 24t-33 9q-26 0-45-19t-19-46"/></svg>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Productivity Insights
+              </h3>
+              <p class="feature-box_text">
+                Visualize progress with graphs and receive  suggestions to optimize performance
+              </p>
+            </div>
+  
+            <div class="feature-box">
+              <svg class="feature-box_icon" xmlns="http://www.w3.org/2000/svg" width="90px" height="90px" viewBox="0 0 24 24"><g class="" fill="none" stroke="#0ABC9C" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path class="" d="M3 14c.83.642 2.077 1.017 3.5 1c1.423.017 2.67-.358 3.5-1s2.077-1.017 3.5-1c1.423-.017 2.67.358 3.5 1M8 3a2.4 2.4 0 0 0-1 2a2.4 2.4 0 0 0 1 2m4-4a2.4 2.4 0 0 0-1 2a2.4 2.4 0 0 0 1 2"/><path class="" d="M3 10h14v5a6 6 0 0 1-6 6H9a6 6 0 0 1-6-6z"/><path class="" d="M16.746 16.726a3 3 0 1 0 .252-5.555"/></g></svg>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Smart Break Reminders
+              </h3>
+              <p class="feature-box_text">
+                Timely notifications for breaks, featuring stretching exercises and mindfulness tips
+              </p>
+            </div>
         </div>
-      </section>
-
-      <section class="section-features">
-        <div class="row">
-          <div class="col-1-of-4">
-            <div class="feature-box">
-              <i class="feature-box_icon icon-basic-world"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                Explore the World
-              </h3>
-              <p class="feature-box_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
-                delectus commodi asperiores officia ratione.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-1-of-4">
-            <div class="feature-box">
-              <i class="feature-box_icon icon-basic-compass"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                Meet nature
-              </h3>
-              <p class="feature-box_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
-                delectus commodi asperiores officia ratione.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-1-of-4">
-            <div class="feature-box">
-              <i class="feature-box_icon icon-basic-map"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                Find your way
-              </h3>
-              <p class="feature-box_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
-                delectus commodi asperiores officia ratione.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-1-of-4">
-            <div class="feature-box">
-              <i class="feature-box_icon icon-basic-heart"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                Live a healthier life
-              </h3>
-              <p class="feature-box_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
-                delectus commodi asperiores officia ratione.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
+      </div>
+      
 
       <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">Most popular tours</h2>
+          <h2 class="heading-secondary">Get Pulse and Feel the Rhythm of Productivity</h2>
         </div>
 
-        <div class="row">
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card_side card_side--front">
+              <div class="card_text">
+                <div class="card_heading"> Starter (FREE) </div>
+                <div class="card_details">
+                  <ul>
+                    <li>Basic Task Management</li>
+                    <li>Focus Timer with Standard Intervals</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy hostels</li>
+                    <li>Difficulty: Easy</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+        <!-- <div class="row">
           <div class="col-1-of-3">
             <div class="card">
               <div class="card_side card_side--front">
@@ -261,7 +266,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="u-center-text u-margin-top-huge">
           <a href="" class="btn btn--green">Discover all tours</a>
