--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
       
       <div class="section-features">
-        <div class="row row__feature-box">
+        <div class="row__feature-box">
           <div class="feature-box">
             <svg class="feature-box_icon" xmlns="http://www.w3.org/2000/svg" width="90px" height="90px" viewBox="0 0 24 24"><path class="path" fill="currentColor" d="M18.749 3a2.25 2.25 0 0 1 2.25 2.25v13.502a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 18.752V5.25A2.25 2.25 0 0 1 5.25 3zm0 1.5H5.25a.75.75 0 0 0-.75.75v13.502c0 .415.336.75.75.75h13.499a.75.75 0 0 0 .75-.75V5.25a.75.75 0 0 0-.75-.75m-10.494 7l1.557-3.55a.75.75 0 0 1 1.333-.081l.05.103l2.381 5.946l1.003-2.003a.75.75 0 0 1 .566-.407l.105-.008h2a.75.75 0 0 1 .102 1.494L17.25 13h-1.537l-1.542 3.081a.75.75 0 0 1-1.319.044l-.048-.1l-2.337-5.835l-1.035 2.362a.75.75 0 0 1-.577.44l-.11.008H6.75a.75.75 0 0 1-.102-1.493l.102-.007zl1.557-3.55z"/></svg>
             <h3 class="heading-tertiary u-margin-bottom-small">
@@ -149,9 +149,8 @@
           <h2 class="heading-secondary">Get Pulse and Feel the Rhythm of Productivity</h2>
         </div>
 
-      <div class="row">
-        <div class="col-1-of-3">
-          <div class="card">
+      <!-- <div class="row_card">
+          <div class="new_card">
             <div class="card_side card_side--front">
               <div class="card_text">
                 <div class="card_heading"> Starter (FREE) </div>
@@ -167,13 +166,13 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
+
+      </div> -->
 
 
 
 
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-1-of-3">
             <div class="card">
               <div class="card_side card_side--front">
@@ -266,7 +265,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div> 
 
         <div class="u-center-text u-margin-top-huge">
           <a href="" class="btn btn--green">Discover all tours</a>
