Updated: Media Queries ALL

--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
     </div> -->
 
     <header class="header">
-      <!-- <div class="header__logo-box">
-        <img src="img/logo-white.png" alt="natours-logo" class="logo" />
-      </div> -->
 
       <div class="header__text-box">
         <h1 class="heading-primary">
@@ -368,7 +365,7 @@
             </div>
           </div>
 
-        <div class="u-center-text u-margin-top-huge">
+        <div class="u-center-text u-margin-top-small">
           <a href="" class="btn btn-text">Read all stories &rarr;</a>
         </div>
       </section>
@@ -378,13 +375,13 @@
     <footer class="footer">
       <div class="footer_logo-box">
         <picture class="footer_logo">
-          <source
+          <!-- <source
             srcset="
               img/logo-green-small-1x.png 1x,
               img/logo-green-small-2x.png 2x
             "
             media="(max-width: 37.5em)"
-          />
+          /> -->
           <img
             srcset="img/Pulse/_logo-pulse.png"
             class="footer_logo"
@@ -393,7 +390,7 @@
           <span class="footer_text">Pulse</span>
         </picture>
       </div>
-      <div class="row">
+      <div class="row row_footer">
         
         <div class="col-1-of-2">
           <div class="footer_navigation">
