--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="img/pulse/_logo-pulse.png"
+      href="img/Pulse/_logo-pulse.png"
     />
 
     <link
